samples/_failures_safe/1761486190_1ea97d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0586f9b1.c: In function ‘main’:
./samples/SAFE/__tmp_0586f9b1.c:149:9: error: expected declaration or statement at end of input
  149 |         fprintf(stderr, "Compression failed\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_0586f9b1.c:149:9: error: expected declaration or statement at end of input
